updating to new schema

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,8 @@
+<IfModule mod_rewrite.c>
 Options +FollowSymLinks
 RewriteEngine On
- 
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
- 
-RewriteRule ^.*$ ./index.php
+RewriteRule (.*) ./index.php
+ErrorDocument 404 /errorpage.php
+</IfModule>
